# medvision-report

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  requirements-eval.txt  requirements.txt
.github/workflows/: ci.yml
api/: schemas.py
api/middleware/: .gitkeep  auth.py  rate_limiter.py
api/routes/: .gitkeep
configs/deployment/: .gitkeep
configs/model/: .gitkeep
configs/training/: .gitkeep  lora.yaml  unet.yaml
data/: README.md  dataset.py
data/preprocessing/: .gitkeep  dicom_reader.py  lung_segmentation.py  normalization.py
deployment/docker/: .gitkeep
deployment/scripts/: .gitkeep
docs/: medical_disclaimer.md
evaluation/: .gitkeep  chexpert_labeler.py  hallucination_rate.py  nlp_metrics.py  run_evaluation.py
models/: .gitkeep  __init__.py  dinov2_detector.py  losses.py  metrics.py  unet_convnext.py
monitoring/alerts/: .gitkeep
notebooks/: .gitkeep
report_generation/: .gitkeep  feature_extractor.py  hallucination_checker.py  llm_client.py  prompts.py  report_generator.py  uncertainty.py
results/: .gitkeep  model_comparison.json
tests/fixtures/: sample_pairs.json
tests/integration/: .gitkeep
tests/unit/: .gitkeep  test_chexpert_labeler.py  test_dataset.py  test_dinov2_detector.py  test_evaluate.py  test_feature_extractor.py  test_hallucination_checker.py  test_hallucination_rate.py  test_llm_client.py  test_losses.py  test_lung_segmentation.py  test_metrics.py  test_nlp_metrics.py  test_normalization.py  test_prompts.py  (+8 more)
training/: .gitkeep  __init__.py  evaluate.py  smoke_test.py  train_dinov2.py  train_unet.py
(+7 files in other folders)
