[project]
name = "medvision-report"
version = "0.1.0"
description = "Chest X-ray pathology detection with LLM-generated structured clinical reports (research project)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
